fix: StringPrinter Lexicographic order